# ELT_BTC

./: .gitignore  README.md  pyproject.toml
.github/workflows/: incremental.yml
config/: benchmark.yaml  lightgbm_4h.yaml  lightgbm_4h_meta.yaml  lightgbm_4h_meta_pivots.yaml  lightgbm_4h_meta_trailing.yaml  lightgbm_4h_tb.yaml  lightgbm_4h_tb_2v066.yaml  lightgbm_4h_tb_3v1.yaml  lightgbm_daily.yaml  lightgbm_volume.yaml  lightgbm_weekly.yaml  settings.yaml
dashboard/: app.py
scripts/: init_db.sql
src/elt_btc/: __init__.py  candles.py  config.py
src/elt_btc/features/: __init__.py  ohlc.py  volume.py
src/elt_btc/ingestion/: __init__.py  backfill_1m.py  exchange.py  incremental_15m.py
src/elt_btc/ml/: __init__.py  backtest.py  benchmark.py  config.py  dataset.py  labels.py  metrics.py  models.py  runs.py  splits.py  trade_backtest.py
src/elt_btc/storage/: __init__.py  parquet_io.py  postgres_io.py
src/elt_btc/utils/: __init__.py  logging.py  tls.py
src/elt_btc/validation/: __init__.py  schemas.py
tests/: conftest.py  test_backfill.py  test_backtest.py  test_candle_logic.py  test_exchange.py  test_features_ohlc.py  test_features_volume.py  test_labels.py  test_meta_labeling.py  test_ml_dataset.py  test_ml_models.py  test_parquet_io.py  test_pivots.py  test_runs.py  test_schemas.py  test_splits.py  test_trade_backtest.py  test_trailing_backtest.py
